--- a/packages/probing-frontend/src/locales/it/common.json
+++ b/packages/probing-frontend/src/locales/it/common.json
@@ -96,5 +96,20 @@
     "title": "Ripristino password completato",
     "subtitle": "La tua nuova password è stata salvata correttamente",
     "button": "Vai alla login"
-  }
+  },
+  "table": {
+    "serviceNameFilter": "Cerca per nome e-service",
+    "serviceProducerFilter": "Cerca per erogatore e-service",
+    "serviceVersionFilter": "Cerca per versione e-service",
+    "serviceStateFilter": "Cerca stato e-service",
+    "refresh": "Aggiorna",
+    "eServiceName": "Nome e-service",
+    "version": "Versione",
+    "producer": "Erogatore",
+    "eServiceStatus": "Stato e-service",
+    "lastDetectionDate": "Data ultima rilevazione",
+    "readMore": "Approfondisci",
+    "loading": "Operazione in corso..."
+  },
+  "hour": "ore"
 }
