changes home name, fix ui, fix table

--- a/packages/probing-frontend/src/locales/en/common.json
+++ b/packages/probing-frontend/src/locales/en/common.json
@@ -110,7 +110,8 @@
     "eServiceStatus": "E-service status",
     "lastDetectionDate": "Last detection date",
     "readMore": "Read more",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "noDataLabel": "No results"
   },
   "hour": "hours"
 }
