--- a/packages/probing-frontend/src/locales/it/common.json
+++ b/packages/probing-frontend/src/locales/it/common.json
@@ -98,18 +98,19 @@
     "button": "Vai alla login"
   },
   "table": {
-    "serviceNameFilter": "Cerca per nome e-service",
-    "serviceProducerFilter": "Cerca per erogatore e-service",
-    "serviceVersionFilter": "Cerca per versione e-service",
-    "serviceStateFilter": "Cerca stato e-service",
-    "refresh": "Aggiorna",
+    "serviceNameFilter": "Cerca per nome",
+    "serviceProducerFilter": "Cerca per erogatore",
+    "serviceVersionFilter": "Cerca per versione",
+    "serviceStateFilter": "Cerca stato",
+    "refresh": "Ricarica",
     "eServiceName": "Nome e-service",
     "version": "Versione",
     "producer": "Erogatore",
     "eServiceStatus": "Stato e-service",
     "lastDetectionDate": "Data ultima rilevazione",
     "readMore": "Approfondisci",
-    "loading": "Operazione in corso..."
+    "loading": "Operazione in corso...",
+    "noDataLabel": "La ricerca non ha prodotto risultati"
   },
   "hour": "ore"
 }
