--- a/packages/probing-frontend/src/locales/en/common.json
+++ b/packages/probing-frontend/src/locales/en/common.json
@@ -114,6 +114,11 @@
     "loading": "Loading..."
   },
   "detailsPage": {
+    "titleOperativita": "Operativity",
+    "historyTitle": "History monitoring",
+    "lineChartTitle": "Response time",
+    "lineChartFailuresTitle": "Recorded anomalies",
+    "monitoringSuspended": "Monitoring suspended",
     "subtitle": "On this page you can check the status of the e-service in real time and explore the performance history",
     "producerName": "PRODUCER",
     "version": "VERSION",
