PIN-4613: Monitoring detail implementation (#8)
* Refactoring services

* refactoring hooks, services and monitoring table

* implements ux detail page, refactoring

* WIP: mocking charts

* implements filters for charts, fix range date

* removes mock data

* removes try catch block

* changed base path

* implements pagopa external url, responsive fix

* Sets suspense false by default, refactoring monitoring service,\n implements skeleton on monitoring detail, implments common utils

* changes function name, fix error page padding

* reverts utils.ts changes

* fixes eserviceDetail and eservicesProbingDetail type

* removes ternary monitoring page, properly types function getChipColor, removes getChipLabel

* changes chipcolor to be used only for probingState

* Refactor skeleton from ternary operator to conditional statement

* Moved layout folder into components

* Updated return to list button variant

* Refactor telemetry data fetching in MonitoringDetailPage

* Improvements

* Responsive fixes

* Implments standard typing for functional components

* Updated app layout max width to 1600px

* Added and implemented PageContainer component

* Improved e-service monitoring table loading behaviour

---------

Co-authored-by: Carmine Porricelli <carmine.porricelli@pagopa.it>

--- a/packages/probing-frontend/src/locales/en/common.json
+++ b/packages/probing-frontend/src/locales/en/common.json
@@ -110,8 +110,41 @@
     "eServiceStatus": "E-service status",
     "lastDetectionDate": "Last detection date",
     "readMore": "Read more",
+    "noDataLabel": "No results",
+    "loading": "Loading..."
+  },
+  "detailsPage": {
+    "titleOperativita": "Operativity",
+    "historyTitle": "History monitoring",
+    "lineChartTitle": "Response time",
+    "lineChartFailuresTitle": "Recorded anomalies",
+    "monitoringSuspended": "Monitoring suspended",
+    "subtitle": "On this page you can check the status of the e-service in real time and explore the performance history",
+    "producerName": "PRODUCER",
+    "version": "VERSION",
+    "eServiceTab": "E-SERVICE TAB",
+    "viewInCatalog": "View in catalog",
+    "returnToList": "Return to the list of e-services",
+    "realTimeTitle": "In real time",
+    "refresh": "Reload",
+    "monitoringState": "MONITORING STATE",
+    "eserviceState": "E-SERVICE STATE",
+    "lastRelevationDate": "LAST RELEVATION DATE",
+    "success": "success",
+    "error": "error",
+    "warning": "warning",
+    "active": "active",
+    "suspended": "suspended",
     "loading": "Loading...",
-    "noDataLabel": "No results"
+    "startDateTime": "Period start date and time",
+    "endDateTime": "Period end date and time",
+    "alerts": {
+      "monitoringSuspended": "Monitoring suspended",
+      "versionSuspendedMessage": "The e-service is offline because this version is currently suspended",
+      "eserviceNotAnswerMessage": "The e-service is offline because it's not responding to the monitoring system",
+      "monitoringSystemSuspendedMessage": "The monitoring system is currently suspended",
+      "genericAlert": "Further details not available"
+    }
   },
   "hour": "hours"
 }
